add land animation, make platform speed automatically update, increase platform speed with score, update TODO

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 - scenes
 - music
 - sound effects
-- animations (move left/right, land)
+- animations (move left/right)
 - platform generation
-- increase platform speed as score increases
