--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,8 @@ GENERAL
 - instructions
 - fix platform generation so that there are no overlaps
 - music toggle
+- landing sound effect
+- Easter Eggs
 
 MOBILE
 - mobile responsiveness
