--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
 GENERAL
 - landing sound effect
+- clean up code
+- deal with top death thing
+- have squishiness vary by fall
 - Easter Eggs
 
 MOBILE
